--- a/css/section-description.css
+++ b/css/section-description.css
@@ -2,6 +2,7 @@
     position: relative;
     width: 100%;
     height: 300px;
+    
 }
 
 .section-description{
@@ -10,6 +11,7 @@
     background: linear-gradient(to right, #580579, #000000); 
     position: relative;
     overflow: hidden;
+    
 }
 .container-description {
     display: flex; 
@@ -33,7 +35,6 @@
     border-radius: 5px;
     box-shadow:0 2px px rgba(0, 0, 0, 0.247); /* Añade la sombra */ ;
     text-align: center; 
-
 }
 .text-description h1 {
     font-family: "Poppins", sans-serif;
@@ -53,18 +54,24 @@
     display: block; /* Asegura que la imagen no tenga espacio debajo */
     mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.719) 0%, rgba(0, 0, 0, 0) 100%);
     mask-size: 100% 100%;
+    top:20px;
+    left: 200px;
+
+    position: absolute
 }
 
 .icons-description{
     display: flex;
     gap: 20px;
     text-align: center;
-    padding: 35px;
+    margin-top: 30px;
+    align-items: center;
 }
 .icons-description a{
+    position: relative;
     text-decoration: none;
     color: aliceblue;
-    padding: 5px;
+    padding: 5px 10px; /* Ajusta el padding según tus necesidades */
     border-radius: 5px;
 }
 .icon-linkedin{
@@ -72,14 +79,57 @@
 }
 .icon-linkedin:hover{
     background-color: rgba(174, 37, 228, 0.89);
-    border: 1px solid #999494; 
+
 }
 
 .icon-cv{
-    background: none;
-    border: 1px solid #e7dede; 
+    border: none; /* Elimina el borde gris aquí */
+    position:relative;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100px;
+    height: 30px;
+    border-radius: 5px;
 }
+.icon-cv::before{
+    content: '';
+    position: absolute;
+    height: 200px;
+    width: 200px;
+    background-image: conic-gradient(rgb(158, 5, 230) 20deg,transparent 120deg);
+    animation: rotar 3s linear infinite;
+    z-index: 0; /* Coloca la animación detrás del contenido */
+}
+@keyframes rotar{
+    from{
+        transform: rotate(0deg);
+    }
+    to{
+        transform :rotate(360deg);
+    }
+}
+.icon-cv::after {
+    content: "";
+    position: absolute;
+    width: 115px;
+    height: 35px;
+    background-color: #2e2c2c;
+    border-radius: 5px;
+}
+
+.icon-cv i, .icon-cv span {
+    position: relative;
+    z-index: 1; /* Asegura que el texto y el ícono estén encima de la animación */
+}
+
+
 .icon-cv:hover{
-    background-color: #3c393d;
-    border: none;
+
+    background-color: #801ba1;
+    cursor: pointer;
+    
 }
+
+
