--- a/css/section-project.css
+++ b/css/section-project.css
@@ -1,27 +1,42 @@
-.section-projects{
-    padding:20px
-} 
-.content-project{
+.section-projects {
+    background-color: #f4f4f4;
+}
+
+.content-project {
     text-align: center;
+    margin-bottom: 20px;
 }
-.consola-img{
-    height: 100px;
+
+.consola-img {
+    width: 100px; /* Ajusta según sea necesario */
+    height: auto;
 }
-.conteiner-card{
-    background-color: rgb(56, 58, 59);
+
+.container-cards {
     display: flex;
-    flex-direction: column;
-    height: 380px;
-    width: 300px;
-    padding: 1rem;
-    border-radius: 0.5rem;
+    gap: 16px;
+    flex-wrap: wrap;
+    justify-content: center; /* Centra las tarjetas en el contenedor */
 }
-.img-card{
-    background-color: rgb(0, 48, 204);
-    height: 60%;
-    border-color: blue;
-    border-radius: 0.2rem;
+
+.container-card {
+    border: 1px solid #ddd;
+    padding: 16px;
+    border-radius: 8px;
+    width: 370px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    background-color: #fff;
 }
-.skills-card{
-    margin-top: auto;
+
+.img-card img {
+    width: 100%;
+    height: auto;
+    border-radius: 4px;
+}
+
+.skills-card  {
+    display: flex;
+    
+    margin: 4px 0;
+    gap: 10px;
 }
