--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
 @import url('section-contact.css');
 @import url('section-description.css');
 @import url('search.css');
+@import url('section-footer.css');
 body{
     margin: 0;
     
