--- a/css/section-description.css
+++ b/css/section-description.css
@@ -60,7 +60,40 @@
 
     position: absolute
 }
+@media (max-width: 1250px) {
+    .description {
+        position: relative;
+        width: 100%;
+        height: auto;
+        
+    }
+    .image-description{
+        display: none;
+    }
+    .section-description{
+        width: 100%;
+        height: auto;
+        position: relative;
+        overflow: hidden;
+        
+        
+    }
+    .description-section {
+        max-width: 100%;
+    }
+    .text-description h1 {
+        font-family: "Poppins", sans-serif;
+        font-size: 25px;
+        font-weight: 600;
+    }
+    .container-description {
+        display: flex;
+        align-items: center;
+        padding: 20px; 
+        height: 380px;
+    }
 
+}
 .icons-description{
     display: flex;
     gap: 20px;
