--- a/css/section-project.css
+++ b/css/section-project.css
@@ -1,10 +1,16 @@
 .section-projects {
-    background-color: #f4f4f4;
+    background-color:#f2f4f6;
     
     padding-bottom: 40px;
 }
+.section-projects h2{
+    color: #00214d;
+    font-weight: 600;
+    font-size:30px ;
+}
 .content-project {
     text-align: center;
+
 }
 
 .consola-img {
@@ -20,7 +26,7 @@
 }
 
 .container-card {
-    border: 1px solid #ddd;
+    border: 1px solid #f2f4f6;
     padding: 16px;
     border-radius: 8px;
     width: 370px;
@@ -36,7 +42,43 @@
 
 .skills-card  {
     display: flex;
-    
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    font-size: 12px;
     margin: 4px 0;
     gap: 10px;
+    
+}
+.skills-card span {
+    background-color: #fffffe; /* Un amarillo brillante */
+    
+    padding: 4px 6px;
+ 
+    color: #00214d; /* Un color oscuro para hacer contraste */
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+}
+.span-title{
+    color: #00214d;
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    font-size: 20px;
+    
+}
+.span-description{
+    color: #1b2d45;
+ 
+    font-weight: 300
+}
+.container-card hr {
+    
+    
+        border: 0;
+        height: 2px;
+        background-color: #8d49b4c5; /* Gris oscuro */
+        box-shadow: 0 4px 8px -2px rgba(0, 0, 0, 0.5); /* Sombra en la línea */
+        margin: 20px 0;
+    
+    
+    
+    
 }
